--- a/main.tex
+++ b/main.tex
@@ -581,17 +581,75 @@ Minimum Sum of Absolute Error (MSAE), Mean Squared Error (MSE), R-squared, Adjus
 Receiver Operating Characteristics \& Area under the curve (ROC-AUC), log-loss, F1-score
 }
 
-\begin{frame}[fragile]{\textbf{Q. Metrics for classification problem?}}
-\begin{wideitemize}
-  \item We're going to use 3 commonly used evaluation metrics:\medskip
+
+\begin{frame}[fragile]{\textbf{Q. Measuring classifier performance?}}
   \begin{wideitemize}
-    \item Accuracy: $\frac{\# \text{predicted correctly}}{\text{total } \# \text{ of examples}}$
-    \item Precision:
-    $\frac{\# \text{ predicted as class A that was actually class A}}{\text{total } \# \text{ predicted to be in class A}}$
-    \item Recall:
-    $\frac{\# \text{ predicted as class A that was actually class A}}{\text{total } \# \text{ that were actually in class A}}$
+  \item Binary classification:\medskip
+    \begin{wideitemize}
+    \item Accuracy\footnote{or classification error: \textit{\#(misclassified) /
+          \#(total examples)} ($1$ - Accuracy)} in \%: \textit{\#(classified correctly) / \#(total examples)}
+    \item Precision: \textit{\#(classified correctly as A) / \#(total examples
+        predicted in A)}
+    \item Recall: \textit{\#(classified correctly as A) / \#(total examples
+        known in A)}. {\footnotesize We can always achieve perfect recall by
+        returning the entire dataset (which will contain many irrelevant examples)}
+    \end{wideitemize}
   \end{wideitemize}
-\end{wideitemize}
+\end{frame}
+
+
+
+\begin{frame}[fragile]{\textbf{Q. Measuring classifier performance?}}
+  \begin{wideitemize}
+  \item Binary classification:\medskip
+    \begin{wideitemize}
+    \item Receiver operating curve (ROC): the pair values (false positive rate
+      or FPR, true positive rate or TPR) as a function of a threshold $\theta \in [0, 1]$.
+      {\footnotesize An ideal classifier is at $(0, 1)$ (top left corner). Diagonal ($FPR
+        = TPR$): random classifier. \textit{This is the worst we can do}.}
+      {\scriptsize Any classifier that is below the diagonal can be improved by flipping its decision.}
+    \item Area under the curve (AUC): It reduces the ROC to a number. Ideal
+      classifier: $AUC = 1$. {\footnotesize ROC and AUC allow us to compare
+        classifiers over different loss conditions, and choose a value of
+        $\theta$ accordingly. Often, there is not a dominant classifier.}
+    \end{wideitemize}
+  \end{wideitemize}
+\end{frame}
+
+\begin{frame}[fragile]{\textbf{Q. Measuring classifier performance?}}
+  \begin{wideitemize}
+  \item $K > 2$ classes:\medskip
+    \begin{wideitemize}
+    \item Again, the most basic measure is the classification error.
+    \item \textit{Confusion matrix:} $\text{K}\times \text{ K}$ matrix where entry \textit{(i, j)} contains the
+      number of instances of class $C_i$ that are classified as $C_j$.
+    \item {\footnotesize It allows us to identify which types of misclassification errors tend
+        to occur, e.g. if there are two classes that are frequently confused.
+        \textbf{Ideal classifier:} the confusion matrix is diagonal.}
+    \end{wideitemize}
+  \end{wideitemize}
+\end{frame}
+
+
+\begin{frame}[fragile]{\textbf{Q. What is a confusion matrix?}}
+  \begin{wideitemize}
+  \item A \textbf{Confusion Matrix} is a simple way of understanding \textbf{how well an
+      algorithm is doing at classifying data}. It is just the idea of \textbf{false
+      positives} and \textbf{false negatives}
+    \begin{flushleft}
+      \makebox[\linewidth][l]{
+        \resizebox{.60\linewidth}{!}{
+          \includegraphics{figures/confusionmatrix.pdf}
+        }
+      }      
+    \end{flushleft}
+    % \item
+    %   \begin{tabular}{cc|cc}
+    %     \multicolumn{1}{c}{} &\multicolumn{1}{c}{} &\multicolumn{2}{c}{Predicted} \\
+    %     \multicolumn{1}{c}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c}{Yes} & \multicolumn{1}{c}{No} \\ \hline
+    %     \multirow[c]{2}{*}{\rotatebox[origin=tr]{90}{Actual}} & Yes & TP & FN \\[1.5ex] & No & FP & TN \\ \hline
+    %   \end{tabular}
+  \end{wideitemize}
 \end{frame}
 
 \begin{frame}[fragile]{\textbf{Q. Can you explain what precision and recall are?}}
@@ -611,31 +669,17 @@ Receiver Operating Characteristics \& Area under the curve (ROC-AUC), log-loss, 
 \end{wideitemize}
 \end{frame}
 
-\begin{frame}[fragile]{\textbf{Q. What is a confusion matrix?}}
-  \begin{wideitemize}
-  \item A \textbf{Confusion Matrix} is a simple way of understanding \textbf{how well an
-    algorithm is doing at classifying data}. It is just the idea of \textbf{false
-      positives} and \textbf{false negatives}
-  \item
-    \begin{tabular}{cc|cc}
-      \multicolumn{1}{c}{} &\multicolumn{1}{c}{} &\multicolumn{2}{c}{Predicted} \\
-      \multicolumn{1}{c}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c}{Yes} & \multicolumn{1}{c}{No} \\ \hline
-      \multirow[c]{2}{*}{\rotatebox[origin=tr]{90}{Actual}} & Yes & TP & FN \\[1.5ex] & No & FP & TN \\ \hline
-    \end{tabular}
-  \end{wideitemize}
-\end{frame}
 
 \begin{frame}[fragile]{\textbf{Q. Can you explain what are false positives and false negatives?}}
   \begin{wideitemize}
-  \item There are two errors that often rear their head when you are learning
-    about hypothesis testing —- \textbf{false positives} and \textbf{false negatives}, technically
-    referred to as type I error and type II error respectively.
+  \item \textbf{False positives} and \textbf{false negatives}, technically
+    referred to as type $I$ error and type $II$ error respectively.
   \item \textbf{False positives} are incorrect classifications of the presence
-    of a condition when it is actually absent. A \textbf{false positive} is \textcolor{red}{when you
-      reject a true null hypothesis}.
+    of a condition when it is actually absent. {\footnotesize A \textbf{false positive} is \textcolor{red}{when you
+      reject a true null hypothesis}}.
   \item \textbf{False negatives} are incorrect classifications of the absence of
-    a condition when it is actually present. A \textbf{false negative} is \textcolor{red}{when you accept
-      a false null hypothesis}.
+    a condition when it is actually present. {\footnotesize A \textbf{false negative} is \textcolor{red}{when you accept
+      a false null hypothesis}}.
   \end{wideitemize}
 \end{frame}
 
@@ -646,30 +690,37 @@ Receiver Operating Characteristics \& Area under the curve (ROC-AUC), log-loss, 
     \item Case 1, \textbf{Airport security}. Ensuring that truly dangerous items like
     weapons cannot be brought on board an aircraft. Getting false positives is better than
     getting false negatives: missing cases of actual weapons could lead to dangerous situations.
-  \item Case 2, \textbf{cancer screening}. Even though false-positive results could create
+  \item Case 2, \textbf{Cancer screening}. Even though false-positive results could create
   anxiety and lead to unnecessary and invasive follow-up tests like biopsies, missing cases of
   actual cancer could lead to delays in treatment that negatively affect somebody's life.
-  \item Case 3, \textbf{forecasting} (health weather). Measuring success of testing cases
+  \item Case 3, \textbf{General forecasting} (health weather). Measuring success of testing cases
   of covid-19 in the US. Tracking rate of false positives and false negatives seems to make sense.
   \end{wideitemize}
 \end{frame}
 
-\begin{frame}[fragile]{\textbf{Q. Can you list some of metrics derived from Confusion Matrix?}}
+\begin{frame}[fragile]{\textbf{Q. Can you list other metrics derived from the Confusion Matrix?}}
   \begin{wideitemize}
-  \item Confusion matrix related metrics
-    \begin{wideitemize}
-    \item Accuracy rate: {\footnotesize $\frac{TP + TN}{Total}$}
-      where {\footnotesize Total is $TP + TN + FP + FN$},\vspace{-.5em}
-    \item Error rate: {\footnotesize $1 - \frac{TP + TN}{Total}$},\vspace{-.5em}
-    \item False positive rate\footnote{It's a measure of accuracy for a test}:
-    {\footnotesize $\frac{FP}{TN + FP}$},\vspace{-.5em}
-    \item False negative rate\footnote{It's proportion of the individuals with a known
-    positive condition for which the test result is negative}:
-    {\footnotesize $\frac{FN}{TP + FN}$},\vspace{-.5em}
-    \item Recall: {\footnotesize $\frac{TP}{TP + TN}$}, Precision: {\footnotesize $\frac{TP}{TP + FP}$},\vspace{-.5em}
-    \item Specificity: {\footnotesize $1 - \frac{FP}{TN + FP}$},\vspace{-.5em}
-    \item Prevalence: {\footnotesize $\frac{TP + FN}{Total}$}
-    \end{wideitemize}
+  \item Confusion matrix related metrics (where $N$ is $TP + TN + FP + FN$)\\
+    \begin{flushleft}
+      \makebox[\linewidth][l]{
+        \resizebox{.60\linewidth}{!}{
+          \includegraphics{figures/confusionmatrixmetrics.pdf}
+        }
+      }      
+    \end{flushleft}
+    % \begin{wideitemize}
+    % \item Accuracy rate: {\footnotesize $\frac{TP + TN}{Total}$}
+    %   where {\footnotesize Total is $TP + TN + FP + FN$},\vspace{-.5em}
+    % \item Error rate: {\footnotesize $1 - \frac{TP + TN}{Total}$},\vspace{-.5em}
+    % \item False positive rate\footnote{It's a measure of accuracy for a test}:
+    % {\footnotesize $\frac{FP}{TN + FP}$},\vspace{-.5em}
+    % \item False negative rate\footnote{It's proportion of the individuals with a known
+    % positive condition for which the test result is negative}:
+    % {\footnotesize $\frac{FN}{TP + FN}$},\vspace{-.5em}
+    % \item Recall: {\footnotesize $\frac{TP}{TP + TN}$}, Precision: {\footnotesize $\frac{TP}{TP + FP}$},\vspace{-.5em}
+    % \item Specificity: {\footnotesize $1 - \frac{FP}{TN + FP}$},\vspace{-.5em}
+    % \item Prevalence: {\footnotesize $\frac{TP + FN}{Total}$}
+    % \end{wideitemize}
   \end{wideitemize}
 \end{frame}
 
@@ -685,23 +736,29 @@ Receiver Operating Characteristics \& Area under the curve (ROC-AUC), log-loss, 
 \end{frame}
 
 
-\begin{frame}[fragile]{\textbf{Q. Is there another way to measure how well an
-      algorithm is classifying data? Also given an example}}
+\begin{frame}[fragile]{\textbf{Q. ROC and AUC? Also given an example}}
   \begin{wideitemize}
-  \item Another way of looking at how well an algorithm is classifying is the
-    \textbf{receiver operating characteristic} or \textbf{ROC} curve.
+  % \item Another way of looking at how well an algorithm is classifying is the
+  %   \textbf{receiver operating characteristic} or \textbf{ROC} curve.
     \item E.g., suppose there is a threshold (or parameter) in your
       classification algorithm that determines whether you have an apple or a
-      non apple object.
-      \begin{wideitemize}
-      \item[-] Plot the \textit{true positive} rate against the
-        \textit{false positive} rate as the threshold (or parameter) varies.
-        Points above the $45\degree$ diagonal are good, and the further
-        into the top left of the plot the better.
-      \item[-] The area under the ROC curve (the \textbf{AUC}\footnote{AUC is
-          used to rank kaggle competitions}) is then a measure of how
-        good different algorithms are. The closer to one (the max possible) the better.
-      \end{wideitemize}
+      non apple object:\\
+      \begin{flushleft}
+        \makebox[\linewidth][l]{
+          \resizebox{.60\linewidth}{!}{
+            \includegraphics{figures/rocauc.pdf}
+          }
+        }      
+      \end{flushleft}
+      % \begin{wideitemize}
+      % \item[-] Plot the \textit{true positive} rate against the
+      %   \textit{false positive} rate as the threshold (or parameter) varies.
+      %   Points above the $45\degree$ diagonal are good, and the further
+      %   into the top left of the plot the better.
+      % \item[-] The area under the ROC curve (the \textbf{AUC}\footnote{AUC is
+      %     used to rank kaggle competitions}) is then a measure of how
+      %   good different algorithms are. The closer to one (the max possible) the better.
+      % \end{wideitemize}
   \end{wideitemize}
 \end{frame}
 
